force-app/main/default/objects/Contact/fields/InterestAreas__c.field-meta.xml
<CustomField>
    <fullName>InterestAreas__c</fullName>
    <inlineHelpText>Areas of Interest for Events for this Contact</inlineHelpText>
    <label>Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>UX</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>