force-app/main/default/objects/Contact/fields/LastAttended__c.field-meta.xml
<CustomField>
    <fullName>LastAttended__c</fullName>
    <formula>LatestEventAttended__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Date of the last Event they attended.</inlineHelpText>
    <label>Latest Attended Date</label>
    <type>Date</type>
</CustomField>