force-app/main/default/objects/Contact/fields/LatestEventAttended__c.field-meta.xml
<CustomField>
    <fullName>LatestEventAttended__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Latest Event</inlineHelpText>
    <label>Latest Event Attended</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts (Latest Event)</relationshipLabel>
    <relationshipName>ContactsCampaignEvent</relationshipName>
    <type>Lookup</type>
</CustomField>