force-app/main/default/objects/Contact/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <label>Show</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nothing</fullName>
            </value>
            <value>
                <fullName>Related Record Components</fullName>
            </value>
            <value>
                <fullName>Key Fields</fullName>
            </value>
            <value>
                <fullName>Narrow Section - Standard</fullName>
            </value>
            <value>
                <fullName>Narrow Section - LWC</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Medium Section - Standard</fullName>
            </value>
            <value>
                <fullName>Medium Section - LWC</fullName>
            </value>
            <value>
                <fullName>Large Section - Standard</fullName>
            </value>
            <value>
                <fullName>Large Section - LWC</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>